# R-Type

./: .gitignore  AComponent.hh  CMakeLists.txt  Entity.cpp  Entity.hh  FooComponent.cpp  FooComponent.hh  FooSystem.cpp  FooSystem.hh  IComponent.hh  ISystem.hh  LISEZ_MOI  Makefile  README.md  RFC.txt  RType_Client  RunWorldServer.cpp  RunWorldServer.hh  VectorDeleter.hpp  World.cpp  World.hh  config.cfg  doxygen.cfg  ecs_client.cpp  ecs_server.cpp  ex2.c  main.cpp  main_client.cpp  main_server.cpp  rtype  test.custom  test.entity  test.json  toto.cpp
ECS/: AComponent.cpp  AComponent.hh  AComponent.hpp  AEvent.cpp  AEvent.hh  ASystem.cpp  ASystem.hh  Any.hpp  CMakeLists.txt  ComponentFactory.hpp  ECSException.cpp  ECSException.hh  Entity.cpp  Entity.hh  EventManager.hpp  Factory.hpp  FooSystem.cpp  Hash.cpp  Hash.hh  IComponent.hh  IEvent.hh  ISystem.hh  Makefile  VectorDeleter.hpp  World.cpp  World.hh
ECS/core/: AComponent.cpp  AComponent.hh  ASystem.cpp  ASystem.hh  Entity.cpp  Entity.hh  ISystem.hh  World.cpp  World.hh  main.cpp
ECS/systems/: BarSystem.cpp  BarSystem.hh  FooSystem.cpp  FooSystem.hh
LibLoader/: CMakeLists.txt  ILibraryLoader.hh  LibLoaderException.cpp  LibLoaderException.hh  ULibraryLoader.hpp  WLibraryLoader.cpp  WLibraryLoader.hh  WLibraryLoader.hpp  main.cpp
LibLoader/test/: Armadillo.cpp  Armadillo.hh  CMakeLists.txt  IAnimal.hh  Platypus.cpp  Platypus.hh
Menu/: CMakeLists.txt  IState.hh  SFMLButton.cpp  SFMLButton.hh  SFMLMenu.cpp  SFMLMenu.hh  SFMLTextBox.cpp  SFMLTextBox.hh  StateCredit.cpp  StateCredit.hh  StateGame.cpp  StateGame.hh  StateManager.cpp  StateManager.hh  StateRoom.cpp  StateRoom.hh  StateSoloGame.cpp  StateSoloGame.hh
Network/: #NetworkException.cpp#  BufferException.cpp  BufferException.hh  CMakeLists.txt  IBuffer.hh  ISocket.hh  ISocketTCP.hh  ISocketUDP.hh  NetworkBuffer.cpp  NetworkBuffer.hh  NetworkException.cpp  NetworkException.hh  NetworkInitializer.hh  Select.cpp  Select.hh  SelectException.cpp  SelectException.hh  Socket.hh  SocketFD.hh  TCPException.cpp  TCPException.hh  UDPException.cpp  UDPException.hh  UNetworkInitializer.cpp  USocket.cpp  USocket.hh  USocketTCP.cpp  USocketTCP.hh  USocketUDP.cpp  USocketUDP.hh  WNetworkInitializer.cpp  WSocket.cpp  WSocket.hh  WSocketTCP.cpp  WSocketTCP.hh  WSocketUDP.cpp  WSocketUDP.hh  main.cpp
NetworkRelay/: CMakeLists.txt  ClientRelay.cpp  ClientRelay.hh  INetworkRelay.hh  Remote.cpp  Remote.hh  Room.cpp  Room.hh  RoomServer.cpp  RoomServer.hh  RunWorldServer.cpp  RunWorldServer.hh  ServerRelay.cpp  ServerRelay.hh
SFML-src/: CMakeCache.txt  Makefile  cmake_install.cmake
Threads/: Any.hpp  CMakeLists.txt  ICondVar.hh  IMutex.hh  IThread.hh  IThread.hpp  LockGuard.hpp  Makefile  MutexException.cpp  MutexException.hh  SafeFifo.hpp  ScopedMutex.cpp  ScopedMutex.hh  Task.hpp  TasksFifo.hpp  ThreadException.cpp  ThreadException.hh  ThreadPool.hh  ThreadPool.hpp  Threads.hh  UCondVar.cpp  UCondVar.hh  UMutex.cpp  UMutex.hh  UThread.cpp  UThread.hh  UThread.hpp  WCondVar.cpp  WCondVar.hh  WMutex.cpp  WMutex.hh  WThread.hpp  main.cpp
components/: ACopyableComponent.hpp  APowerUpComponent.hpp  ASerializableComponent.cpp  ASerializableComponent.hh  ActionComponent.cpp  ActionComponent.hh  AttachComponent.cpp  AttachComponent.hh  AttachPowerUpComponent.cpp  AttachPowerUpComponent.hh  AttachedToComponent.cpp  AttachedToComponent.hh  AutoDestructComponent.cpp  AutoDestructComponent.hh  Box2DComponent.cpp  Box2DComponent.hh  CMakeLists.txt  CollisionComponent.cpp  CollisionComponent.hh  CollisionPoint.cpp  CollisionPoint.hh  CollisionPowerComponent.cpp  CollisionPowerComponent.hh  EntitySpawnerComponent.cpp  EntitySpawnerComponent.hh  ExplosionComponent.cpp  ExplosionComponent.hh  FireAlwaysComponent.cpp  FireAlwaysComponent.hh  Friction2DComponent.cpp  Friction2DComponent.hh  INetworkSerializableComponent.hh  ISerializableComponent.hh  LifeComponent.cpp  LifeComponent.hh  LifePowerUpComponent.cpp  LifePowerUpComponent.hh  MoveFollowComponent.cpp  MoveFollowComponent.hh  MoveForwardComponent.cpp  (+44 more)
doc/: RFC.txt  TODO  class_diagram.txt
entities/: ALIEN_BOMB_EXPLOSION.entity  BACKGROUND_1.entity  BACKGROUND_2.entity  BASIC_BULLET.entity  BASIC_BULLET_2.entity  BASIC_BULLET_3.entity  BASIC_BULLET_4.entity  BOMB_BULLET.entity  BOMB_BULLET_1.entity  BOMB_BULLET_2.entity  BOMB_BULLET_3.entity  BORDER_BOTTOM_LEVEL_1.entity  BORDER_BOTTOM_LEVEL_2.entity  BORDER_BOTTOM_LEVEL_3.entity  BORDER_BOTTOM_LEVEL_4.entity  BORDER_SPAWNER_BOTTOM.entity  BORDER_SPAWNER_TOP.entity  BORDER_TOP_LEVEL_1.entity  BORDER_TOP_LEVEL_2.entity  BORDER_TOP_LEVEL_3.entity  BORDER_TOP_LEVEL_4.entity  BOSS_1.entity  BOSS_1_WRATH.entity  BOSS_BULLET.entity  BOSS_EXPLOSION.entity  BOSS_SPAWNER.entity  BULLET_EXPLOSION.entity  EXPLOSION.entity  FAT_BULLET.entity  GAME.entity  LASER_BULLET.entity  LASER_EXPLOSION.entity  MONSTER_1.entity  MONSTER_2.entity  MONSTER_BASIC_BULLET.entity  MONSTER_BASIC_BULLET_3.entity  MONSTER_BASIC_BULLET_4.entity  MONSTER_FROM_BOSS.entity  MONSTER_SPAWNER.entity  MONSTER_SPAWNER_GAME.entity  (+12 more)
events/: CMakeLists.txt  CollisionEvent.cpp  CollisionEvent.hh  DisconnectPlayerEvent.cpp  DisconnectPlayerEvent.hh  EntityDeletedEvent.cpp  EntityDeletedEvent.hh  InputChangedEvent.cpp  InputChangedEvent.hh  NewPlayerEvent.cpp  NewPlayerEvent.hh  SFMLJoystickEvent.cpp  SFMLJoystickEvent.hh  SFMLKeyEvent.cpp  SFMLKeyEvent.hh
systems/: #Friction2DSystem.cpp#  ActionFireSystem.cpp  ActionFireSystem.hh  ActionMovementSystem.cpp  ActionMovementSystem.hh  AttachSystem.cpp  AttachSystem.hh  AttachedToSystem.cpp  AttachedToSystem.hh  AutoDestructSystem.cpp  AutoDestructSystem.hh  BackgroundSystem.cpp  BackgroundSystem.hh  CMakeLists.txt  CollisionSoloSystem.cpp  CollisionSoloSystem.hh  CollisionSystem.cpp  CollisionSystem.hh  DisconnectPlayerSystem.cpp  DisconnectPlayerSystem.hh  EntityDeleterSystem.cpp  EntityDeleterSystem.hh  EntityParserSystem.hh  EntitySpawnerSystem.cpp  EntitySpawnerSystem.hh  FireAlwaysSystem.cpp  FireAlwaysSystem.hh  Friction2DSystem.cpp  Friction2DSystem.hh  IPlayerRespawner.hh  (+68 more)
(+199 files in other folders)
