CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(RType)

if (UNIX)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -ggdb3 -O0")
endif (UNIX)

SET(EXECUTABLE_SOURCE_DIR, {CMAKE_SOURCE_DIR})

SET(HEADER)

SET(SOURCE
	main.cpp)

ADD_SUBDIRECTORY("${PROJECT_SOURCE_DIR}/components")
ADD_SUBDIRECTORY("${PROJECT_SOURCE_DIR}/systems")	
ADD_SUBDIRECTORY("${PROJECT_SOURCE_DIR}/events")
	
ADD_SUBDIRECTORY(Network)
ADD_SUBDIRECTORY(ECS)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/components)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/ECS)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/events)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/Network)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/systems)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/SFML-src/include)

ADD_EXECUTABLE(RType ${SOURCE} ${HEADER})
SET(CMAKE_BUILD_TYPE "Release")

if (UNIX)
	TARGET_LINK_LIBRARIES (RType /usr/lib/libsfml-window.so.2.1)
	TARGET_LINK_LIBRARIES (RType /usr/lib/libsfml-system.so.2.1)
	TARGET_LINK_LIBRARIES (RType /usr/lib/libsfml-network.so.2.1)
	TARGET_LINK_LIBRARIES (RType /usr/lib/libsfml-audio.so.2.1)
	TARGET_LINK_LIBRARIES (RType /usr/lib/libsfml-graphics.so.2.1)
endif (UNIX)

if (WIN32)
	TARGET_LINK_LIBRARIES (RType ${CMAKE_SOURCE_DIR}/SFML-W/sfml-audio.lib)
	TARGET_LINK_LIBRARIES (RType ${CMAKE_SOURCE_DIR}/SFML-W/sfml-graphics.lib)
	TARGET_LINK_LIBRARIES (RType ${CMAKE_SOURCE_DIR}/SFML-W/sfml-network.lib)
	TARGET_LINK_LIBRARIES (RType ${CMAKE_SOURCE_DIR}/SFML-W/sfml-window.lib)
	TARGET_LINK_LIBRARIES (RType ${CMAKE_SOURCE_DIR}/SFML-W/sfml-system.lib)
endif (WIN32)

TARGET_LINK_LIBRARIES (RType Networklib)
TARGET_LINK_LIBRARIES (RType ECSlib)