CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(RType_Server)
PROJECT(RType_Client)

SET(SERVER_BIN RType_Server)
SET(CLIENT_BIN RType_Client)

if (UNIX)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -ggdb3 -O0 -Wall")
endif (UNIX)

SET(EXECUTABLE_SOURCE_DIR, {CMAKE_SOURCE_DIR})

SET(HEADER_S)

SET(HEADER_C)

SET(SOURCE_S
	main_server.cpp)

SET(SOURCE_C
	main_client.cpp)
	
# CALL OTHER CMAKEFILES
ADD_SUBDIRECTORY("${PROJECT_SOURCE_DIR}/components")
ADD_SUBDIRECTORY("${PROJECT_SOURCE_DIR}/systems")	
ADD_SUBDIRECTORY("${PROJECT_SOURCE_DIR}/events")
ADD_SUBDIRECTORY("${PROJECT_SOURCE_DIR}/utility")
ADD_SUBDIRECTORY("${PROJECT_SOURCE_DIR}/NetworkRelay")
	
ADD_SUBDIRECTORY(Network)
ADD_SUBDIRECTORY(Threads)
ADD_SUBDIRECTORY(LibLoader)
ADD_SUBDIRECTORY(ECS)

# INCLUDE .hh / .hpp
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/Network)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/components)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/ECS)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/LibLoader)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/utility)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/events)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/Threads)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/systems)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/SFML-src)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/SFML-src/include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/utility)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/NetworkRelay)

# CREATION OF EXECUTABLE FILES
ADD_EXECUTABLE(${SERVER_BIN} ${SOURCE_S} ${HEADER_S})
ADD_EXECUTABLE(${CLIENT_BIN} ${SOURCE_C} ${HEADER_C})

#RELEASE MODE

SET(CMAKE_BUILD_TYPE "Release")

# COPY RESSOURCES
SET(RESSOURCES ${CMAKE_SOURCE_DIR}/Ressources)
FILE(COPY ${RESSOURCES} DESTINATION ${CMAKE_BINARY_DIR})

# COMPILE WITH SFML
if (UNIX)
	TARGET_LINK_LIBRARIES (${CLIENT_BIN} /usr/lib/libsfml-window.so.2.1)
	TARGET_LINK_LIBRARIES (${CLIENT_BIN} /usr/lib/libsfml-system.so.2.1)
	TARGET_LINK_LIBRARIES (${CLIENT_BIN} /usr/lib/libsfml-network.so.2.1)
	TARGET_LINK_LIBRARIES (${CLIENT_BIN} /usr/lib/libsfml-audio.so.2.1)
	TARGET_LINK_LIBRARIES (${CLIENT_BIN} /usr/lib/libsfml-graphics.so.2.1)

	TARGET_LINK_LIBRARIES (${CLIENT_BIN} pthread)
	TARGET_LINK_LIBRARIES (${SERVER_BIN} pthread)

	TARGET_LINK_LIBRARIES (${CLIENT_BIN} /usr/lib/libsfml-window.so.2.1)
	TARGET_LINK_LIBRARIES (${CLIENT_BIN} /usr/lib/libsfml-system.so.2.1)
	TARGET_LINK_LIBRARIES (${CLIENT_BIN} /usr/lib/libsfml-network.so.2.1)
	TARGET_LINK_LIBRARIES (${CLIENT_BIN} /usr/lib/libsfml-audio.so.2.1)
	TARGET_LINK_LIBRARIES (${CLIENT_BIN} /usr/lib/libsfml-graphics.so.2.1)
endif (UNIX)

if (WIN32)
	SET(DLL ${CMAKE_SOURCE_DIR}/SFML-W/Release)
	FILE(COPY ${DLL} DESTINATION ${CMAKE_BINARY_DIR})
	TARGET_LINK_LIBRARIES (${CLIENT_BIN} ${CMAKE_SOURCE_DIR}/SFML-W/sfml-audio.lib)
	TARGET_LINK_LIBRARIES (${CLIENT_BIN} ${CMAKE_SOURCE_DIR}/SFML-W/sfml-graphics.lib)
	TARGET_LINK_LIBRARIES (${CLIENT_BIN} ${CMAKE_SOURCE_DIR}/SFML-W/sfml-network.lib)
	TARGET_LINK_LIBRARIES (${CLIENT_BIN} ${CMAKE_SOURCE_DIR}/SFML-W/sfml-window.lib)
	TARGET_LINK_LIBRARIES (${CLIENT_BIN} ${CMAKE_SOURCE_DIR}/SFML-W/sfml-system.lib)
endif (WIN32)

# INCLUDE LIB
TARGET_LINK_LIBRARIES (${SERVER_BIN} Networklib)
TARGET_LINK_LIBRARIES (${SERVER_BIN} ECSlib)
TARGET_LINK_LIBRARIES (${SERVER_BIN} LibLoader)

TARGET_LINK_LIBRARIES (${CLIENT_BIN} Networklib)
TARGET_LINK_LIBRARIES (${CLIENT_BIN} ECSlib)
TARGET_LINK_LIBRARIES (${CLIENT_BIN} LibLoader)
