CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT (R-Type)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11") 
SET(EXECUTABLE_SOURCE_DIR, {CMAKE_SOURCE_DIR})
SET(HEADER_FILES 
	ISocketTCP.hh
	USocketTCP.hh
	WSocketTCP.hh
	ISocketUDP.hh
	WSocketUDP.hh
	USocketUDP.hh
	NetworkException.hh
	ISocket.hh)
	
SET(SOURCES USocketTCP.cpp
	WSocketTCP.cpp
	USocketUDP.cpp
	WSocketUDP.cpp
	NetworkException.cpp)

SET (LIB_TYPE STATIC)
	
FILE(GLOB_RECURSE ${SOURCES} ${HEADER_FILES})

ADD_LIBRARY(Networklib ${LIB_TYPE} ${SOURCES})